modal component added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,11 @@
 {
+  "emmet.syntaxProfiles": {
+    "javascript": "jsx",
+    "xml": {
+      "attr_quotes": "single"
+    }
+  },
+  "files.associations": {
+    "*.js": "javascriptreact"
+  }
 }
